# vec3

./: CMakeLists.txt  README.md  hitSphere.cpp  main.cpp  test.cpp  vecAdd.cpp
include/: rng.hpp  vec3-expression.hpp  vec3-ordinal.hpp  vec3-simd.hpp  vec3.hpp
